UI now resizes along with the game, fixed flickering of the ui

--- a/www/style.css
+++ b/www/style.css
@@ -1,22 +1,22 @@
 @font-face {
-  font-family: "bffont";
-	font-style: normal;
-	font-weight: 600;
-  src: url("bffont.ttf");
+  	font-family: "bffont";
+	src: url("bffont.ttf");
+}
+::-webkit-scrollbar { 
+    display: none; 
 }
 #orangeRect {
 	background: linear-gradient(rgba(249,147,43,0.9), rgba(181,109,35,0.9));
-	border:0;
-	margin-left:21.65%;
-	margin-top:41.8%;
-	width:13.65%;
+	margin-top: 48.6%;
+	margin-left: 7.5%;
+	width:20.5%;
+	height: 4.3%;
 }
 #list {
 	background-color: rgba(41,56,63,0.8);	
-	border:0;
-	margin-left:21.65%;
 	margin-top:0px;
-	width:13.65%;
+	margin-left: 7.5%;
+	width:20.5%;
 }
 #item1, #item2, #item3, #item4, #item5, #item6, #item7, #item8, #item9{
 	border:0;
@@ -24,22 +24,49 @@
 }
 #text{
 	color: #FFF;
+	font-size: calc(0.55vw + 0.55vh);
+	letter-spacing: -0.2px;
 }
-#page {
-   width: 100%;
-   height: 100%;
-   overflow: hidden;
+/* For resolutions lower than 720p */
+.page {
+	width: 100vw; 
+	height: 56.25vw; /* height:width ratio = 9/16 = .5625  */
+	/*background-color: rgba(256,256,256,0.5);*/
+	max-height: 100vh;
+	max-width: 177.78vh; /* 16/9 = 1.778 */
+	margin: auto;
+	position: absolute;
+	top:0;bottom:0; /* vertical center */
+	left:0;right:0; /* horizontal center */
+	overflow: visible;
 }
+
+
+/* For resolutions higher than 720p */
+@media screen and (min-height: 720px) and (min-width: 1280px){
+  .page {
+		width: 1280px; 
+		height: 720px; 
+		/*background-color: rgba(256,256,256,0.5);*/
+		margin: auto;
+		position: absolute;
+		top:0;bottom:0;
+		left:0;right:0;
+		overflow: visible;
+    }
+}
+
 label{
 	/*font-family: '$MENU_medium';*/
 	font-family: bffont;
+  font-size: calc(0.55vw + 0.55vh);
 	color: #FFF;
 	text-shadow:1px 1px 10px #7fccff;
 	display: block;
 	overflow: hidden;
 	white-space: nowrap;
-  vertical-align: middle;
-  line-height:1.7em;
+  	vertical-align: middle;
+  	line-height:1.7em;
 	margin-left:4%;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
